--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
   </head>
   <body>
 <div class="container">
-  <div class="nav">
-    <h2>Rick</h2>
-      <ul>
-        <li>Bio</li>
-        <li>Proyectos web</li>
-        <li>Escritos</li>
-        <li>Hobbies</li>
-        <li>Contacto</li>
-      </ul>
-  </div>
-
+  
+  <ul class="navigation">
+    <li>Bio</li>
+    <li>Proyectos web</li>
+    <li>Escritos</li>
+    <li>Hobbies</li>
+    <li>Contacto</li>      
+  </ul>      
+  
   <div class="main">
     <h1>Ricardo Araya's Portfolio</h1>
     <img src= "./25525.jpg" />
