--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li>Contacto</li>      
   </ul>      
   
-  <div class="main">
+  <div class="main background">
     <h1>Ricardo Araya's Portfolio</h1>
     <img src= "./25525.jpg" />
     <p> Bienvenido a mi humilde rincón en la internet, soy Ricardo y te invito a conocer mis distintas habilidades y pasatiempos</p>
