--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Ricardo Araya portfolio</title>
     <link href="./index.css"  type="text/css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Permanent+Marker|Russo+One" rel="stylesheet">
   </head>
   <body>
 <div class="container">
@@ -17,16 +18,15 @@
   
   <div class="main background">
     <h1>Ricardo Araya's Portfolio</h1>
-    <img src= "./25525.jpg" />
     <p> Bienvenido a mi humilde rincón en la internet, soy Ricardo y te invito a conocer mis distintas habilidades y pasatiempos</p>
-    <h2>Ingeniero comercial</h2>
+    <h3>Ingeniero comercial</h3>
     <p>Con especialización en Marketing Digital.</p>
-    <h2>Programador en desarrollo</h2>
-    <p>Como marketero digital, hay que saber algo de esto.</p>
-    <h2>Escritor aficionado</h2>
+    <h3>Desarrollador Web</h3>
+    <p>Aprendiendo a crear webs como programador</p>
+    <h3>Escritor aficionado</h3>
     <p>Sobre todo poemas, pero incursionando otras áreas.</p>
-    <h2>Gamer motoquero</h2>
-    <p>Y mucho más!!...no, mentira, más menos eso lo cubre todo</p>
+    <h3>Gamer motoquero</h3>
+    <p>Y mucho más!!...no mentira, más menos eso lo cubre todo</p>
   </div>
 
   <div class="footer">
