--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <h2>Ingeniero comercial</h2>
     <p>Con especialización en Marketing Digital.</p>
     <h2>Desarrollador Web</h2>
-    <p>Aprendiendo a crear webs como programador</p>
+    <p>Aprendiendo a crear webs como programador.</p>
     <h2>Escritor aficionado</h2>
     <p>Sobre todo poemas, pero incursionando otras áreas.</p>
     <h2>Gamer motoquero</h2>
-    <p>Y mucho más!!...no mentira, más menos eso lo cubre todo</p>
+    <p>Y mucho más!!...no mentira, más menos eso lo cubre todo.</p>
   </div>
 
   <div class="footer">
