--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <link href="./index.css"  type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Monoton|Permanent+Marker|Russo+One" rel="stylesheet">
   </head>
+
   <body>
 <div class="container">
   
-  <ul class="navigation">
-    <li>Bio</li>
-    <li>Proyectos web</li>
-    <li>Escritos</li>
-    <li>Hobbies</li>
-    <li>Contacto</li>      
-  </ul>      
+  <header>
+    <ul class="navigation">
+      <li>Bio</li>
+      <li>Proyectos web</li>
+      <li>Escritos</li>
+      <li>Hobbies</li>
+    </ul> 
+  </header>
+       
   
   <div class="main background">
     <h1>Ricardo Araya's Portfolio</h1>
@@ -29,12 +32,13 @@
     <p>Y mucho más!!...no mentira, más menos eso lo cubre todo.</p>
   </div>
 
-  <div class="footer">
+  <footer>
     <ul>
+      <li>Contacto</li>
       <li>Instagram</li>
       <li>Linkedin</li>
     </ul>
-  </div>
+  </footer>
 </div>
   </body>
 </html>
