icon footer etc

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   
   <header>
     <ul class="navigation">
-      <li>Bio</li>
+      <img src="./Icon.jpg" width="50" height="50">
+      <li>Curriculum</li>
       <li>Proyectos web</li>
       <li>Escritos</li>
       <li>Hobbies</li>
